--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,19 +59,18 @@
         "ALL-STUDENT": "All Student"
       }
     },
-    "ADMINISTRATION": {
-      "TEXT": "Administration",
+    "STAFF-USERS": {
+      "TEXT": "Staff Users",
       "LIST": {
-        "ADMINISTRATIVE-STAFF": "Administrative Staff",
-        "OFFICE-BEARERS": "Office Bearers"
+        "ADD-STAFF": "Add Staff",
+        "ALL-STAFF": "All Staff"
       }
     },
     "ADMISSION": {
       "TEXT": "Admissions",
       "LIST": {
         "ADMISSION-GUIDELINES": "Admission Guidelines",
-        "APPLY-NOW-FORM-SETUP": "Apply Now Form Setup",
-        "FEE-STRUCTURE": "Fee Structure"
+        "NEW-ADMISSION": "New Admission"
       }
     },
     "PLACEMENTS": {
@@ -101,20 +100,12 @@
       }
     },
 
-
-
-
-
-
-
-
-
     "DOWNLOADS": {
       "TEXT": "Downloads",
       "LIST": {
-        "FORMS": "Forms",
-        "BROCHURES": "Brochures",
-        "CIRCULARS": "Circulars"
+        "IMAGE-GALLARY": "Image Gallary",
+        "VIDEO-GALLARY": "Video Gallary",
+        "CATEGORY": "Category"
       }
     },
     "ALUMNI": { 
@@ -137,36 +128,9 @@
       "TEXT": "Contact",
           "LIST": {
         "COLLEGE-CONTACT-INFO": "College Contact Info",
-        "MAP-LOCATION": "Map Location",
-        "FEEDBACK-INBOX": "Feedback Inbox"
+        "FEEDBACK-INFO": "Feedback Info"
       }
     },
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     "TEACHER": {
       "TEXT": "Teacher",
